@@ -1,6 +1,7 @@
 Next Release
 ============
 
+* ENH: New Freesurfer interface: Tkregister2 (for conversion of fsl style matrices to freesurfer format)
 * ENH: New FSL interfaces: WarpPoints, WarpPointsToStd.
 * ENH: New Freesurfer interface: MRIPretess
 * ENH: New miscelaneous interface: AddCSVRow
